Revision history for Perl extension File-chmod.

0.33      2013-09-07

0.32  Sat Jul 28 18:40:00 2007
	- added copyright and license

0.31  1999-07-21
	- fixed getsymchmod() bug
	- was using map() incorrectly in getmod().
	- condensed lschmod()

0.30  1999-07-21
	- added umask() honoring for symchmod()
	- function name changes
	- fixed debugging bugs
	- fixed set-uid and set-gid bug
	- fixed file lock/set-gid bug
	- removed useless data structures
	- compacted code
	- see the new REVISIONS section in the docs for explanations

0.22  1999-04-24
	- refixed the untarring error (now it works nicely)

0.20  1999-04-03
	- fixed the untarring error (didn't appear in a directory)

0.12  1999-02-13
	- fixed determine_mode() method for determining mode

0.11  1999-02-12
	- fixed determine_mode() bug

0.10  1999-02-12
	- changed @EXPORT and @EXPORT_OK functions

0.01  1999-02-06
	- original version; created by h2xs 1.18