@@ -59,12 +59,12 @@ sub getchmod {
 sub symchmod {
   my $mode = shift;
 
-  warnings::warnif 'deprecated', '$UMASK being true is deprecated'
-    . ' it will be false by default in the future. This change'
-    . ' is being made because this not the behavior of the unix command'
-    . ' `chmod`. This warning can be disabled by putting explicitly'
-    . ' setting $File::chmod::UMASK to false or any non 2 true value'
-    if $UMASK == 2;
+#  warnings::warnif 'deprecated', '$UMASK being true is deprecated'
+#    . ' it will be false by default in the future. This change'
+#    . ' is being made because this not the behavior of the unix command'
+#    . ' `chmod`. This warning can be disabled by putting explicitly'
+#    . ' setting $File::chmod::UMASK to false or any non 2 true value'
+#    if $UMASK == 2;
 
   my @return = getsymchmod($mode,@_);
   my $ret = 0;
@@ -333,8 +333,11 @@ version 0.33
 =head1 SYNOPSIS
 
   use File::chmod;
-  # this next line is temporarily required until we can remove
-  # UMASK being on by default
+  # It is recommended that you explicitly set $UMASK as the default may change
+  # in the future, 0 is recommended to behave like system chmod, set to 1 if
+  # you want it enabled, so that if later we decide to disable it by default
+  # it won't change your code. $UMASK has been changed to be true by using
+  # numeric value 2 internally
   $File::chmod::UMASK = 0;
 
   # chmod takes all three types
@@ -361,6 +364,13 @@ with its own that gets an octal mode, a symbolic mode (see below), or
 an "ls" mode (see below).  If you wish not to overload chmod(), you can
 export symchmod() and lschmod(), which take, respectively, a symbolic
 mode and an "ls" mode.
+
+An added feature to version 0.30 is the C<$UMASK> variable, explained in
+detail below; if C<symchmod()> is called and this variable is true, then the
+function uses the (also new) C<$MASK> variable (which defaults to C<umask()>)
+as a mask against the new mode. This mode is one by default, and changes the
+behavior from what you would expect if you are used to UNIX C<chmod>.
+B<This may change in the future.>
 
 Symbolic modes are thoroughly described in your chmod(1) man page, but
 here are a few examples.
@@ -391,11 +401,6 @@ regardless of what it had been before.  symchmod() is useful for allowing
 the modifying of a file's permissions without having to run a system call
 or determining the file's permissions, and then combining that with whatever
 bits are appropriate.  It also operates separately on each file.
-
-An added feature to version 0.30 is the $UMASK variable, explained below; if
-symchmod() is called and this variable is true, then the function uses the
-(also new) $MASK variable (which defaults to umask()) as a mask against the
-new mode.  This is documented below more clearly.
 
 =head2 Functions
 
