@@ -1,6 +1,13 @@
 Revision history for Perl extension File-chmod.
 
 0.33      2013-09-07
+	[DEPRECATIONS]
+	- $UMASK is true, this behavior is surprising if you're used to UNIX chmod
+	[NEWS]
+	- new maintainer Caleb Cushing
+	- migrate to Dist::Zilla
+	- add tests (note test failures are likely to be a result of new tests,
+	  the code hasn't really changed)
 
 0.32  Sat Jul 28 18:40:00 2007
 	- added copyright and license
